# SDLC

./: sonar-project.properties
.github/workflows/: codacy-analysis.yml
Akimova/Task_1/: main.py
Akimova/Task_1/ConsoleApp1sof/: LogicalInfo.cs  Program.cs  WorkWithFile.cs  WorkWithJson.cs  WorkWithXML.cs  WorkWithZIP.cs
Aksenov/Task_1/: CMakeLists.txt  main.cpp
Aksenov/Task_1/OS First Task/: kek1.txt  main.py
Bocharov/Task_2/: Latypov2.sln
Bocharov/Task_2/Latypov2/: Program.cs
Chastov/Lab_1/: Example1.sln  loginProtected.php  Отчет.docx
Chastov/Lab_1/Практика1(BruteForce)/: Example1.csproj  Menu.Designer.cs  Menu.cs  Method1.Designer.cs  Method1.cs  Method2.Designer.cs  Method2.cs  Program.cs  dvwaAuth.cs
Chastov/Task_1/ConsoleApp1/: ConsoleApp1.sln
Chastov/Task_2/ConsoleApp2/: ConsoleApp2.sln
Domishev/Task_1/python/: os1.py
Domishev/Task_1/rust/: Cargo.toml
Domishev/Task_1/rust/src/: main.rs
Ivarovsky/Task_1/OS_Lab_1/: OS_Lab_1.sln  Program.cs
Karpan/: main.py
Karpan/ConsoleApp1/: ConsoleApp1.sln  LogicalInfo.cs  Program.cs  WorkWithFile.cs  WorkWithJson.cs  WorkWithXML.cs  WorkWithZIP.cs
Larkin/Task_1/: Homework.sln
Larkin/Task_1/Homework/: Program.cs
Nekrasova/Task_1/: Program.cs  lab1.py
Nikiforov/Task_1/ConsoleApp2/: ConsoleApp2.sln
Nikiforov/Task_2/ConsoleApp1/: ConsoleApp1.sln
Nurmatov/Task_1/: LatypovLab1.txt
Rodionov/Task_1/: main.py
Stacenko/Task_1/: main.py
Teryaev/Task_1/: Program.cs  Program.py
Ustinov/Task_1/: OS_LAB_1.sln  Program.cs
Ustinov/Task_2/: OS_Lab_2.sln
Головченко/Task_1/: dz.py
(+29 files in other folders)
