[package]
name = "os1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
pico-args = "0.4.2"

sysinfo = { version = "0.20.3", default-features = false }

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
serde-xml-rs = "0.5.0"

quick-xml = "0.23.0-alpha3"

zip = { version = "0.5.13", default-features = false }
